fix(landing): dark mode background

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,9 @@
 		--ring: 20 14.3% 4.1%;
 
 		--radius: 0.5rem;
+
+		--grid-color: 0, 0%, 97%;
+		--color1: 0, 0%, 35%;
 	}
 
 	.dark {
@@ -72,6 +75,26 @@
 		--border: 12 6.5% 15.1%;
 		--input: 12 6.5% 15.1%;
 		--ring: 24 5.7% 82.9%;
+
+		--grid-color: 0, 0%, 6%;
+		--color1: 0, 0%, 35%;
+	}
+
+	.bg-grid-pattern {
+		min-height: 100vh;
+		background-image: linear-gradient(hsl(var(--grid-color)) 0.9px, transparent 0.9px),
+			linear-gradient(to right, hsl(var(--grid-color)) 0.9px, transparent 0.9px);
+		background-size: 38px 38px;
+	}
+
+	.bg-mesh-1 {
+		min-height: 100vh;
+		background-image: radial-gradient(
+				at 5% 5%,
+				hsla(var(--color1), 0.15) 0px,
+				transparent 25%
+			),
+			radial-gradient(at 90% 85%, hsla(var(--color1), 0.2) 0px, transparent 15%);
 	}
 }
 
